# PyClassLabs

./: README.md  pyproject.toml  requirements.txt
Labs/: Lab1.ipynb  Lab2.ipynb
